--- a/myblog.css
+++ b/myblog.css
@@ -144,3 +144,79 @@
   border-radius: 50%;
   margin-right: 8px;
 }
+
+.list_page {
+  margin-left: -350px;
+}
+
+.heart-dropdown {
+  font-size: 14px;
+  cursor: pointer;
+  margin-left: 5px;
+  color: gray;
+}
+.heart-dropdown:hover {
+  color: black;
+}
+
+.liked-users-popup {
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  z-index: 100;
+  width: 250px;
+  position: absolute;
+}
+
+.popup-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+  font-weight: bold;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #ddd;
+}
+
+.popup-header .close-popup {
+  background: none;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  color: red;
+}
+
+.popup-content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  padding-top: 10px;
+}
+
+.liked-user {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.liked-user img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.pagination .active {
+  background-color: #861f1c; /* 선택된 페이지 배경색 */
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+
+.pagination .disabled {
+  pointer-events: none;
+  opacity: 0.5; /* 클릭 비활성화 시 흐리게 표시 */
+  cursor: default;
+}
